kubernetes/apps/entertainment/audiobookshelf/app/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: audiobookshelf-backend
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: audiobookshelf
  timeout:
    http:
      requestTimeout: 0s
      connectionIdleTimeout: 3600s
  tcpKeepalive:
    probes: 3
    idleTime: 60s
    interval: 60s
